--- a/Links-profile-html.css
+++ b/Links-profile-html.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    outline: 2px solid red;
 }
 
 /* ======== colors for the webpage ======== */
@@ -35,6 +34,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .main-container-styling {
